wait method added. remove method added. auto clean canvas added.

--- a/modules/index.html
+++ b/modules/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+      #canvas1 {
+        border: 1px solid black;
+      }
+    </style>
+  </head>
   <body>
-    <canvas id="canvas1"></canvas>
+    <canvas id="canvas1" width="700" height="400"></canvas>
     <script src="canvast.js"></script>
   </body>
 </html>
