--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <canvas id="canvas1" width="700" height="400"></canvas>
-    <script src="canvast.js"></script>
+    <script src="modules/canvast.js"></script>
   </body>
 </html>
